# autocomplete-hash-trie-comparison

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_test/: CMakeCache.txt
include/: Benchmark.h  DatasetLoader .h  DatasetLoader.h  HashMap.h  HelperFuncts.h  Testing.h  Trie.h
src/: Benchmark.cpp  DatasetLoader.cpp  HashMap.cpp  HelperFuncts.cpp  Testing.cpp  Trie.cpp  main.cpp
